RegressionTests/TestSuiteExport/reject/inline_asm_unknown_instruction.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmUnknownInstruction

fn f() void {
    var x: u32 = 0;
    asm {
        NOTAREAL {x}, #1
    };
}